# llama

./: .gitignore  CHANGES.md  LICENSE  Makefile  README.md  dune-project  dune-workspace  llama.opam  llama.opam.template  llama_core.opam  llama_interactive.opam  llama_midi.opam  llama_tests.opam  shell.nix
.github/workflows/: release.yml  test.yml
cpal-wrapper/: cpal_wrapper.ml  cpal_wrapper.mli  dune
cpal-wrapper/cpal-wrapper-rs/: .cargo  Cargo.toml
cpal-wrapper/cpal-wrapper-rs/src/: lib.rs
dune.lock/: ao.0.2.4.pkg  ao.pkg  base-bytes.base.pkg  base.pkg  base.v0.17.3.pkg  bigarray-compat.pkg  cf.0.5.0.pkg  cf.pkg  conf-ao.1.pkg  conf-ao.pkg  conf-libffi.2.0.0.pkg  conf-libffi.pkg  conf-mingw-w64-gcc-i686.1.pkg  conf-mingw-w64-gcc-x86_64.1.pkg  conf-mingw-w64-libffi-i686.1.pkg  conf-mingw-w64-libffi-x86_64.1.pkg  conf-mingw-w64-sdl2-i686.1.pkg  conf-mingw-w64-sdl2-x86_64.1.pkg  conf-pkg-config.4.pkg  conf-pkg-config.pkg  conf-sdl2.1.pkg  conf-sdl2.pkg  ctypes-foreign.0.23.0.pkg  ctypes-foreign.pkg  ctypes.pkg  dune-configurator.pkg  flexdll.0.44.pkg  fsevents.0.3.0.pkg  fsevents.pkg  host-arch-x86_32.1.pkg  host-arch-x86_64.1.pkg  integers.pkg  jane-street-headers.pkg  jane-street-headers.v0.17.0.pkg  jst-config.pkg  jst-config.v0.17.0.pkg  lock.dune  ocaml-base-compiler.5.3.0.pkg  ocaml-compiler-libs.v0.17.0.pkg  ocaml-compiler.5.3.0.pkg  (+40 more)
examples/: demo.ml  dune  echo.ml  echo_effect.ml  from_readme.ml  interactive.ml  keyboard_helper.ml  keyboard_helper.mli  list_midi_ports.ml  midi.ml  midi_cat.ml  midi_interactive.ml  midi_player.ml  midi_serial.ml  oscilloscope.ml  polyphonic_events.ml  polyphonic_events_graphical.ml  random_pentatonic.ml  sandstorm.ml  sine_wave_440hz.ml  squelch.ml
examples/midi/: byte_array_parser.ml  byte_array_parser.mli  dune  llama_midi.ml  llama_midi.mli
lib/: biquad_filter.mli  dsl.ml  dsl.mli  dune  float.ml  float.mli  llama.ml  llama.mli  modules.ml  modules.mli  music.ml  music.mli  signal.ml  signal.mli  signal_player.ml  signal_player.mli
lib/audio-io/: audio_io.ml  audio_io.mli  dune
lib/audio-io/audio-io-rs/: Cargo.toml
lib/audio-io/audio-io-rs/src/: lib.rs
scripts/: switch-to-vendored-rust.sh
src/audio-io/: dune
src/audio-io/audio-io-rs/src/: lib.rs
src/core/: biquad_filter.ml  biquad_filter.mli  dsl.ml  dsl.mli  dune  float.ml  llama_core.ml  llama_core.mli  midi.ml  midi.mli  modules.ml  modules.mli  music.ml  music.mli  signal.ml  signal.mli
src/graphical/: dune  input.ml  input.mli  llama_graphical.ml  llama_graphical.mli  window.ml  window.mli
src/interactive/: defaults.ml  defaults.mli  dune  llama_interactive.ml  llama_interactive.mli  types.mli  window.ml  window.mli
src/io/: dune  llama_io.ml  llama_io.mli
src/llama/: array.ml  array.mli  biquad_filter.ml  dsl.ml  dsl.mli  dune  float.mli  list.ml  llama.ml  llama.mli  midi_message_byte_queue.ml  midi_message_byte_queue.mli  midi_serial.ml  midi_serial.mli  modules.ml  modules.mli  music.ml  music.mli  player.ml  player.mli  signal.ml  signal.mli  signal_player.ml  signal_player.mli
src/llama-io/: dune  llama_io.ml
src/low-level/: dune  llama_low_level.ml  llama_low_level.mli
src/low-level/config/: discover.ml
src/low-level/low-level-rust/: Cargo.toml  dune
src/low-level/low-level-rust/.cargo/: vendor_dependencies_config.toml
src/low-level/low-level-rust/src/: lib.rs
src/midi/: byte_array_parser.ml  byte_array_parser.mli  dune  llama_midi.ml  llama_midi.mli  low_level.ml
test/: dune  llama_tests.ml
