(library
 (name keyboard_helper)
 (modules keyboard_helper)
 (libraries llama_interactive)
 (package llama_interactive))

(executable
 (public_name sine_wave_440hz)
 (modules sine_wave_440hz)
 (package llama)
 (libraries llama))

(executable
 (public_name from_readme)
 (modules from_readme)
 (package llama)
 (libraries llama))

(executable
 (public_name squelch)
 (modules squelch)
 (package llama)
 (libraries llama))

(executable
 (public_name echo_effect)
 (modules echo_effect)
 (package llama)
 (libraries llama))

(executable
 (public_name polyphonic_events)
 (modules polyphonic_events)
 (package llama)
 (libraries llama))

(executable
 (public_name polyphonic_events_graphical)
 (modules polyphonic_events_graphical)
 (package llama_interactive)
 (libraries llama_interactive))

(executable
 (public_name oscilloscope)
 (modules oscilloscope)
 (package llama_interactive)
 (libraries llama_interactive))

(executable
 (public_name interactive)
 (modules interactive)
 (package llama_interactive)
 (libraries llama_interactive keyboard_helper))

(executable
 (public_name midi_player)
 (modules midi_player)
 (package llama_interactive)
 (libraries llama_interactive llama))

(executable
 (public_name sandstorm)
 (modules sandstorm)
 (package llama_interactive)
 (libraries llama_interactive keyboard_helper))
