(rule
 (target libaudio_io.a)
 (deps
  (source_tree audio-io-rs))
 (action
  (progn
   (run cargo build --manifest-path=audio-io-rs/Cargo.toml --release)
   (run mv audio-io-rs/target/release/%{target} %{target}))))

(library
 (name audio_io)
 (public_name llama.audio_io)
 (no_dynlink)
 (foreign_archives audio_io)
 (c_library_flags
  (-lpthread -lc -lm))
 (flags
  (-ccopt
   -framework
   -ccopt
   CoreServices
   -ccopt
   -framework
   -ccopt
   CoreAudio
   -ccopt
   -framework
   -ccopt
   AudioUnit
   -ccopt
   -framework
   -ccopt
   AudioToolbox)))
