(rule
 (target liblow_level.a)
 (deps
  (source_tree low-level-rust))
 (action
  (progn
   (run cargo build --manifest-path=low-level-rust/Cargo.toml --release)
   (run mv low-level-rust/target/release/%{target} %{target}))))

(rule
 (enabled_if
  (= %{system} macosx))
 (action
  (write-file
   library_flags.sexp
   "(-cclib -framework -cclib CoreServices -cclib -framework -cclib CoreAudio -cclib -framework -cclib AudioUnit -cclib -framework -cclib AudioToolbox)")))

(rule
 (enabled_if
  (= %{system} linux))
 (action
  (write-file library_flags.sexp "(-cclib -lasound)")))

(library
 (name llama_low_level)
 (public_name llama.low_level)
 (no_dynlink)
 (foreign_archives low_level)
 (c_library_flags
  (-lpthread -lc -lm))
 (library_flags
  (:include library_flags.sexp)))
