(rule
 (target liblow_level.a)
 (deps
  (source_tree low-level-rust))
 (action
  (progn
   (chdir
    low-level-rust
    (run cargo build --release))
   (run mv low-level-rust/target/release/%{target} %{target}))))

(rule
 (enabled_if
  (= %{system} macosx))
 (action
  (write-file
   library_flags.sexp
   "(-cclib -framework -cclib CoreServices -cclib -framework -cclib CoreAudio -cclib -framework -cclib AudioUnit -cclib -framework -cclib AudioToolbox)")))

(rule
 (enabled_if
  (= %{system} linux))
 (action
  (with-stdout-to
   library_flags.sexp
   (progn
    (echo "( -cclib \"")
    (run pkg-config --libs alsa)
    (echo "\")")))))

(rule
 (enabled_if
  (and
   (<> %{system} macosx)
   (<> %{system} linux)))
 (action
  (write-file library_flags.sexp "()")))

(library
 (name llama_low_level)
 (public_name llama.low_level)
 (no_dynlink)
 (foreign_archives low_level)
 (c_library_flags
  (-lpthread -lc -lm))
 (library_flags
  (:include library_flags.sexp)))
