[package]
name = "low_level"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0"
cpal = "0.15"
env_logger = "0.9" # later versions depend on rustix 0.38 which requires a later version of rust than is available on some older systems we want to support
hound = "3.5"
log = "0.4"
midir = "0.9"
ocaml = "0.22"
